Add siunitx package to template

--- a/Template/chapter-n.tex
+++ b/Template/chapter-n.tex
@@ -4,6 +4,7 @@
 \author{Rylan Polster}
 
 \usepackage{amsmath,amssymb,amsthm}
+\usepackage{siunitx}
 \usepackage[margin=1.0in]{geometry}
 
 \begin{document}
