--- a/Template/chapter-n.tex
+++ b/Template/chapter-n.tex
@@ -3,6 +3,8 @@
 \title{Chapter <n>: Example Title}
 \author{Rylan Polster}
 
+\usepackage[parfill]{parskip}
+\usepackage{multirow}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{siunitx}
 \usepackage[margin=1.0in]{geometry}
