Add bm, textcomp, and gensymb packages to template

--- a/Template/chapter-n.tex
+++ b/Template/chapter-n.tex
@@ -6,6 +6,8 @@
 \usepackage[parfill]{parskip}
 \usepackage{multirow}
 \usepackage{amsmath,amssymb,amsthm}
+\usepackage{bm}
+\usepackage{textcomp,gensymb}
 \usepackage{siunitx}
 \usepackage[margin=1.0in]{geometry}
 
